feat: detect invalid pack url and write in log and command feedback