@@ -1,9 +1,10 @@
 
 package codes.atomys.resourcepackrefresher;
 
+import java.io.FileNotFoundException;
 import java.io.InputStream;
 import java.math.BigInteger;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 import java.security.MessageDigest;
 
@@ -11,7 +12,7 @@ public abstract class ChecksumHelper {
   public static String getMD5Checksum(String url) {
     URLConnection connection;
     try {
-      connection = new URL(url).openConnection();
+      connection = new URI(url).toURL().openConnection();
       InputStream inputStream = connection.getInputStream();
       MessageDigest digest = MessageDigest.getInstance("MD5");
       byte[] buffer = new byte[8192];
@@ -23,6 +24,8 @@ public abstract class ChecksumHelper {
       BigInteger bigInt = new BigInteger(1, md5sum);
       String output = bigInt.toString(16);
       return output;
+    } catch (FileNotFoundException e) {
+      System.err.println("[" + ResourcePackRefresher.MOD_ID + "]: The resourcepack url: "+ url +" is not a valid file. Please check your configuration.");
     } catch (Exception e) {
       e.printStackTrace();
     }
